// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer Edit Panel should be able to generate a new peering 1`] = `
<PeerEditPanel>
  <Styled(div)>
    <div>
      <PanelHeader
        leftChildren={
          <ForwardRef(NavigationButton)
            icon={[Function]}
            label="peerList.panels.close"
            onClick={[Function]}
          />
        }
        rightChildren={
          <ForwardRef(NavigationButton)
            disabled={true}
            icon={[Function]}
            label="peerList.panels.create"
            onClick={[Function]}
          />
        }
        title="peerList.panels.createPeer"
      >
        <Styled(div)>
          <div>
            <ForwardRef(NavigationButton)
              icon={[Function]}
              label="peerList.panels.close"
              onClick={[Function]}
            >
              <Styled(button)
                onClick={[Function]}
                styleProps={
                  Object {
                    "active": undefined,
                    "disabled": undefined,
                  }
                }
              >
                <button
                  onClick={[Function]}
                >
                  <Icon
                    element={[Function]}
                    scale="2em"
                  >
                    <MaterialIconClose
                      role="img"
                    >
                      <svg
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </MaterialIconClose>
                  </Icon>
                  <ForwardRef(Box)
                    display="block"
                    element="span"
                  >
                    <span>
                      peerList.panels.close
                    </span>
                  </ForwardRef(Box)>
                </button>
              </Styled(button)>
            </ForwardRef(NavigationButton)>
            <ForwardRef(Box)
              flexGrow={1}
            >
              <div />
            </ForwardRef(Box)>
            <Styled(span)>
              <span>
                peerList.panels.createPeer
              </span>
            </Styled(span)>
            <ForwardRef(NavigationButton)
              disabled={true}
              icon={[Function]}
              label="peerList.panels.create"
              onClick={[Function]}
            >
              <Styled(button)
                onClick={[Function]}
                styleProps={
                  Object {
                    "active": undefined,
                    "disabled": true,
                  }
                }
              >
                <button
                  onClick={[Function]}
                >
                  <Icon
                    element={[Function]}
                    scale="2em"
                  >
                    <MaterialIconSaveOutlined
                      role="img"
                    >
                      <svg
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
                        />
                      </svg>
                    </MaterialIconSaveOutlined>
                  </Icon>
                  <ForwardRef(Box)
                    display="block"
                    element="span"
                  >
                    <span>
                      peerList.panels.create
                    </span>
                  </ForwardRef(Box)>
                </button>
              </Styled(button)>
            </ForwardRef(NavigationButton)>
          </div>
        </Styled(div)>
      </PanelHeader>
      <PanelSection>
        <Styled(div)
          styleProps={
            Object {
              "dark": undefined,
            }
          }
        >
          <div>
            <ForwardRef(TextInput)
              label="peerList.panels.name"
              marginBottom={10}
              onChange={[Function]}
              value="something peer name"
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.name"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value="something peer name"
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.name"
                          value="something peer name"
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.name
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
            <ForwardRef(TextInput)
              errorMessage="Invalid URL"
              label="peerList.panels.URL"
              marginBottom={10}
              onChange={[Function]}
              value="https://host-url.ch/"
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.URL"
                        styleProps={
                          Object {
                            "hasError": true,
                            "hasIcon": false,
                          }
                        }
                        value="https://host-url.ch/"
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.URL"
                          value="https://host-url.ch/"
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": true,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.URL
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                  <Styled(div)>
                    <div>
                      Invalid URL
                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
            <ForwardRef(TextInput)
              label="peerList.panels.token"
              marginBottom={10}
              onChange={[Function]}
              value="abc123def456"
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.token"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value="abc123def456"
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.token"
                          value="abc123def456"
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.token
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
          </div>
        </Styled(div)>
      </PanelSection>
      <PanelSectionHeader
        title="peerList.panels.information"
      >
        <Styled(div)>
          <div>
            peerList.panels.information
          </div>
        </Styled(div)>
      </PanelSectionHeader>
    </div>
  </Styled(div)>
  <Toast
    autoHideDuration={5000}
    onClose={[Function]}
    open={false}
    type="error"
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    />
  </Toast>
</PeerEditPanel>
`;

exports[`Peer Edit Panel should render 1`] = `
<PeerEditPanel>
  <Styled(div)>
    <div>
      <PanelHeader
        leftChildren={
          <ForwardRef(NavigationButton)
            icon={[Function]}
            label="peerList.panels.close"
            onClick={[Function]}
          />
        }
        rightChildren={
          <ForwardRef(NavigationButton)
            disabled={true}
            icon={[Function]}
            label="peerList.panels.create"
            onClick={[Function]}
          />
        }
        title="peerList.panels.createPeer"
      >
        <Styled(div)>
          <div>
            <ForwardRef(NavigationButton)
              icon={[Function]}
              label="peerList.panels.close"
              onClick={[Function]}
            >
              <Styled(button)
                onClick={[Function]}
                styleProps={
                  Object {
                    "active": undefined,
                    "disabled": undefined,
                  }
                }
              >
                <button
                  onClick={[Function]}
                >
                  <Icon
                    element={[Function]}
                    scale="2em"
                  >
                    <MaterialIconClose
                      role="img"
                    >
                      <svg
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </MaterialIconClose>
                  </Icon>
                  <ForwardRef(Box)
                    display="block"
                    element="span"
                  >
                    <span>
                      peerList.panels.close
                    </span>
                  </ForwardRef(Box)>
                </button>
              </Styled(button)>
            </ForwardRef(NavigationButton)>
            <ForwardRef(Box)
              flexGrow={1}
            >
              <div />
            </ForwardRef(Box)>
            <Styled(span)>
              <span>
                peerList.panels.createPeer
              </span>
            </Styled(span)>
            <ForwardRef(NavigationButton)
              disabled={true}
              icon={[Function]}
              label="peerList.panels.create"
              onClick={[Function]}
            >
              <Styled(button)
                onClick={[Function]}
                styleProps={
                  Object {
                    "active": undefined,
                    "disabled": true,
                  }
                }
              >
                <button
                  onClick={[Function]}
                >
                  <Icon
                    element={[Function]}
                    scale="2em"
                  >
                    <MaterialIconSaveOutlined
                      role="img"
                    >
                      <svg
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
                        />
                      </svg>
                    </MaterialIconSaveOutlined>
                  </Icon>
                  <ForwardRef(Box)
                    display="block"
                    element="span"
                  >
                    <span>
                      peerList.panels.create
                    </span>
                  </ForwardRef(Box)>
                </button>
              </Styled(button)>
            </ForwardRef(NavigationButton)>
          </div>
        </Styled(div)>
      </PanelHeader>
      <PanelSection>
        <Styled(div)
          styleProps={
            Object {
              "dark": undefined,
            }
          }
        >
          <div>
            <ForwardRef(TextInput)
              label="peerList.panels.name"
              marginBottom={10}
              onChange={[Function]}
              value=""
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.name"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value=""
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.name"
                          value=""
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.name
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
            <ForwardRef(TextInput)
              label="peerList.panels.URL"
              marginBottom={10}
              onChange={[Function]}
              value=""
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.URL"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value=""
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.URL"
                          value=""
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.URL
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
            <ForwardRef(TextInput)
              label="peerList.panels.token"
              marginBottom={10}
              onChange={[Function]}
              value=""
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.token"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value=""
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.token"
                          value=""
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.token
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
          </div>
        </Styled(div)>
      </PanelSection>
      <PanelSectionHeader
        title="peerList.panels.information"
      >
        <Styled(div)>
          <div>
            peerList.panels.information
          </div>
        </Styled(div)>
      </PanelSectionHeader>
    </div>
  </Styled(div)>
  <Toast
    autoHideDuration={5000}
    onClose={[Function]}
    open={false}
    type="error"
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    />
  </Toast>
</PeerEditPanel>
`;

exports[`Peer Edit Panel should render with ID 1`] = `
<PeerEditPanel
  id="peerId1"
>
  <Styled(div)>
    <div>
      <PanelHeader
        leftChildren={
          <ForwardRef(NavigationButton)
            icon={[Function]}
            label="peerList.panels.close"
            onClick={[Function]}
          />
        }
        rightChildren={
          <ForwardRef(NavigationButton)
            disabled={true}
            icon={[Function]}
            label="peerList.panels.save"
            onClick={[Function]}
          />
        }
        title="peerList.panels.editPeer"
      >
        <Styled(div)>
          <div>
            <ForwardRef(NavigationButton)
              icon={[Function]}
              label="peerList.panels.close"
              onClick={[Function]}
            >
              <Styled(button)
                onClick={[Function]}
                styleProps={
                  Object {
                    "active": undefined,
                    "disabled": undefined,
                  }
                }
              >
                <button
                  onClick={[Function]}
                >
                  <Icon
                    element={[Function]}
                    scale="2em"
                  >
                    <MaterialIconClose
                      role="img"
                    >
                      <svg
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </MaterialIconClose>
                  </Icon>
                  <ForwardRef(Box)
                    display="block"
                    element="span"
                  >
                    <span>
                      peerList.panels.close
                    </span>
                  </ForwardRef(Box)>
                </button>
              </Styled(button)>
            </ForwardRef(NavigationButton)>
            <ForwardRef(Box)
              flexGrow={1}
            >
              <div />
            </ForwardRef(Box)>
            <Styled(span)>
              <span>
                peerList.panels.editPeer
              </span>
            </Styled(span)>
            <ForwardRef(NavigationButton)
              disabled={true}
              icon={[Function]}
              label="peerList.panels.save"
              onClick={[Function]}
            >
              <Styled(button)
                onClick={[Function]}
                styleProps={
                  Object {
                    "active": undefined,
                    "disabled": true,
                  }
                }
              >
                <button
                  onClick={[Function]}
                >
                  <Icon
                    element={[Function]}
                    scale="2em"
                  >
                    <MaterialIconSaveOutlined
                      role="img"
                    >
                      <svg
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
                        />
                      </svg>
                    </MaterialIconSaveOutlined>
                  </Icon>
                  <ForwardRef(Box)
                    display="block"
                    element="span"
                  >
                    <span>
                      peerList.panels.save
                    </span>
                  </ForwardRef(Box)>
                </button>
              </Styled(button)>
            </ForwardRef(NavigationButton)>
          </div>
        </Styled(div)>
      </PanelHeader>
      <PanelSection>
        <Styled(div)
          styleProps={
            Object {
              "dark": undefined,
            }
          }
        >
          <div>
            <ForwardRef(TextInput)
              label="peerList.panels.name"
              marginBottom={10}
              onChange={[Function]}
              value="Test Peer Name"
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.name"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value="Test Peer Name"
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.name"
                          value="Test Peer Name"
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.name
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
            <ForwardRef(TextInput)
              errorMessage="Invalid URL"
              label="peerList.panels.URL"
              marginBottom={10}
              onChange={[Function]}
              value="https://test-url.ch/"
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.URL"
                        styleProps={
                          Object {
                            "hasError": true,
                            "hasIcon": false,
                          }
                        }
                        value="https://test-url.ch/"
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.URL"
                          value="https://test-url.ch/"
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": true,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.URL
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                  <Styled(div)>
                    <div>
                      Invalid URL
                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
            <ForwardRef(TextInput)
              description="Leave empty if you don't want to change it"
              label="peerList.panels.token"
              marginBottom={10}
              onChange={[Function]}
              value=""
            >
              <Styled(div)
                styleProps={
                  Object {
                    "marginBottom": 10,
                  }
                }
              >
                <div>
                  <Styled(label)>
                    <label>
                      <Styled(input)
                        onChange={[Function]}
                        placeholder="peerList.panels.token"
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                        value=""
                      >
                        <input
                          onChange={[Function]}
                          placeholder="peerList.panels.token"
                          value=""
                        />
                      </Styled(input)>
                      <Styled(span)
                        styleProps={
                          Object {
                            "hasError": false,
                            "hasIcon": false,
                          }
                        }
                      >
                        <span>
                          peerList.panels.token
                        </span>
                      </Styled(span)>
                    </label>
                  </Styled(label)>
                  <Styled(div)>
                    <div>
                      Leave empty if you don't want to change it
                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </ForwardRef(TextInput)>
          </div>
        </Styled(div)>
      </PanelSection>
      <PanelSectionHeader
        title="peerList.panels.information"
      >
        <Styled(div)>
          <div>
            peerList.panels.information
          </div>
        </Styled(div)>
      </PanelSectionHeader>
    </div>
  </Styled(div)>
  <Toast
    autoHideDuration={5000}
    onClose={[Function]}
    open={false}
    type="error"
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    />
  </Toast>
</PeerEditPanel>
`;
